
2011-09-27 Ibán Cereijo <ibancg@gmail.com>

	* Fixed bug #643435 in debian

2011-08-22 Ibán Cereijo <ibancg@gmail.com>

	* Released lingot 0.9.1
	
2011-08-13 Ibán Cereijo <ibancg@gmail.com>

	* Fixed bug #34007 (#637610 in debian).

2011-03-11 Ibán Cereijo <ibancg@gmail.com>

	* Fixed bug #33046 (#622038 in debian).
	* Added 48K sample rate to OSS and ALSA.

2011-02-21 Ibán Cereijo <ibancg@gmail.com>

	* Fixed bug #31532.
	* Added configuration file importation/exportation options from the GUI.
	* Improved messages to the user.
	* Added tooltips.
	* Applied a blur effect over the gauge background image.
	* Released Lingot 0.9.0
			
	
2010-10-20 Ibán Cereijo <ibancg@gmail.com>

	* Added sync between computation and read threads over the temporal buffer.
	* The deviation value didn't work in version 0.8.2b2.
	* Released Lingot 0.8.2b3.
	
	
2010-10-18 Ibán Cereijo <ibancg@gmail.com>

	* Fixed bug #31369
	* Audio API is now transparent, providing the read thread.
	* Improved error messages from audio device issues.
	* Released Lingot 0.8.2b2


2010-10-12 Ibán Cereijo <ibancg@gmail.com>

	* Added different scales support.
	   + Scale edition in a cell table.
	   + Importation of Scala .scl files (http://www.huygens-fokker.org/scala/)
	   + The gauge adapts its range to the scale. 
	   + The deviation control has been moved to the scale tab.
	* The sample rate control has been changed to a GtkComboBoxEntry.
	* When the sample rate is not available, the user is notified.
	* Corrected some minor errors opening audio devices.
	* Improved OSS error messages.
	* Minor changes in the capture tab in the config dialog.
	* lingot-error now supports multiple messages in the queue.
	* Added some macros to simulate try/catch. Used in audio handling.
	* The error dispatcher runs now under its own timer.
	* Released Lingot 0.8.2b1


2010-03-17 Ibán Cereijo <ibancg@gmail.com>

	* Released Lingot 0.8.1


2010-03-14 Ibán Cereijo <ibancg@gmail.com>
