@@ -44,7 +44,8 @@
                         <property name="tooltip" translatable="yes">Here you can pick the sound system.</property>
                         <property name="items">OSS
 ALSA
-JACK</property>
+JACK
+PulseAudio</property>
                         <signal name="changed" handler="on_combobox_input_architecture_changed"/>
                       </widget>
                       <packing>
