@@ -65,6 +65,6 @@ typedef struct _LingotMainFrame LingotMainFrame;
 //#define catch while (0);catch_label: if (exception != 0)
 
 // TODO: remove from here
-//#define PULSEAUDIO
+#define PULSEAUDIO
 
 #endif
